<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultMedicineActivity"
    android:background="@drawable/mantau_watermark">

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="4dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="4dp"
       android:foregroundGravity="center"
       app:cardCornerRadius="40dp"
       >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/green"
           android:padding="13dp"
           >

           <TextView
               android:id="@+id/medicName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:text="@string/medicName"
               />
           <TextView
               android:id="@+id/medicContra"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicName"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicContra"
               />
           <TextView
               android:id="@+id/medicCompos"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicContra"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicCompos"
               />

           <TextView
               android:id="@+id/medicDesc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicCompos"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicDesc"
               />
           <TextView
               android:id="@+id/medicDos"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicDesc"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/MedicDosage"
               />
           <TextView
               android:id="@+id/medicHow"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicDos"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicHow"
               />
           <TextView
               android:id="@+id/medicSide"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicHow"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicSide"
               />
           <TextView
               android:id="@+id/medicWarn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/medicSide"
               app:layout_constraintStart_toStartOf="parent"
               android:text="@string/medicWarning"
               app:layout_constraintBottom_toBottomOf="parent"
               />

       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.cardview.widget.CardView>

</ScrollView>